[package]
name = "sslrelay"
version = "0.1.0"
authors = ["PinkP4nther <pinkp4nther@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.34"
httparse = "1.4.1"
chunked_transfer = "1.4.0"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
toml = "0.5.8"