[package]
name = "sslrelay"
version = "0.4.31"
authors = ["PinkP4nther <pinkp4nther@protonmail.com> @Pink_P4nther"]
edition = "2018"
description = "A TCP relay library for relaying/modifying/spoofing TCP traffic by implementing callback code."
repository = "https://github.com/PinkP4nther/SSLRelay-lib"
keywords = ["tcp", "networking", "relay", "tls", "ssl"]
categories = ["reverse-engineering", "network-relay", "tcp"]
license = "Apache-2.0"

[dependencies.openssl]
version = "0.10.36"

[dependencies.toml]
version = "0.5.8"