[package]
name = "sslrelay"
version = "0.6.2"
authors = ["PinkP4nther <pinkp4nther@protonmail.com> @Pink_P4nther"]
edition = "2018"
description = "A TCP relay library for relaying/modifying/spoofing TCP traffic by implementing callback code."
repository = "https://github.com/PinkP4nther/SSLRelay-lib"
keywords = ["tcp", "networking", "relay", "tls", "ssl"]
categories = ["network-programming"]
license = "Apache-2.0"

[dependencies.openssl]
version = "0.10.36"